<resources>
    <string name="app_name">Trokka</string>
    <string name="logo">Logo</string>
    <string name="tittle_app">Titulo de la app</string>
    <string name="init_session">INICIAR SESIÓN</string>
    <string name="crear_cuenta">¿No tienes cuenta? Regístrate</string>
    <string name="iniciar_sesion">¿Tienes cuenta? Inicia sesión</string>
    <string name="registrarse">Resgistrarse</string>

    <string name="nombre_usuario">Nombre de usuario o email</string>
    <string name="descripcion">Descripcion</string>
    <string name="valoracion">Valoracion</string>

    <string name="correo_electronico">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir contraseña</string>

    <string name="user">Usuario</string>
    <string name="producte">Producto</string>

    <string name="userPicture">Foto perfil</string>
    <string name="imagePencil">Foto lapiz</string>
    <string name="imageMyObjects">Foto mis objetos</string>
    <string name="imageChangeAccount">Foto canviar cuenta</string>
    <string name="imageObject">Imagen del objeto</string>
    <string name="imageFavorite">Me gusta</string>

    <!-- Menu bajo -->
    <string name="map">Mapa</string>
    <string name="lupa">lupa</string>
    <string name="perfil">Perfil</string>

    <string name="move_to_edit_perfil">Editar Objetos</string>
    <string name="move_to_canviar_compta">Canviar cuenta</string>
    <string name="move_to_upload_objects">Subir objetos</string>
    <string name="move_to_my_favorites">Favoritos</string>
    <string name="tornar_enrere">Tornar enrere</string>
    <string name="subir_objetos">Subir objetos</string>
    <string name="imatge_del_nou_objecte">Imatge del nou objecte</string>
    <string name="boto_per_afegir_nou_objecte">Boto per afegir nou objecte</string>
    <string name="username">Username</string>
    <string name="boton_preferencias">boton preferencias</string>
    <string name="prefer_ncias">Preferéncias</string>
    <string name="mode_app">Mode clar/obscur</string>
    <string name="grandaria_texts">Grandaria texts</string>
    <string name="cerca_un_punt_de_trobada">Cerca un punt de trobada</string>
    <string name="mapa">Mapa</string>
    <string name="buscar">Buscar</string>

    <string name="ajustes">Ajustes</string>
    <string name="titol_de_l_objecte">Titol de l\'objecte.</string>
    <string name="titulo">Titulo</string>
    <string name="titlo_de_l_objecte">Titlo de l\'objecte</string>
    <string name="afegeix_una_descripci">Afegeix una descripció</string>
    <string name="descripci">Descripció</string>
    <string name="que_busques_a_canvi">Que busques a canvi?</string>
    <string name="descriu_que_busques_a_canvi">Descriu que busques a canvi</string>
    <string name="subir_objeto">Pujar Objecte</string>
    <string name="editar_objeto">Editar Objecte</string>
    <string name="modificar_objecto">Modificar Objecte</string>
    <string name="estad_sticas_de_la_aplicaci_n">Estadísticas de la aplicación</string>


</resources>