<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:padding="18dp"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/logo"
                android:layout_marginTop="30dp"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/ic_trooka_tittle">
            </ImageView>

            <ImageView
                android:contentDescription="@string/tittle_app"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_trooka_tittle_op2"
                app:tint="@color/trooka_tittle">
            </ImageView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tittle"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/init_session"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            android:backgroundTint="@color/init_session"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textColor="@color/enlaces"
            android:textSize="16sp"
            android:clickable="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>