<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_fondo"
    tools:context=".UploadObjectActivity">

    <Toolbar
        android:id="@+id/so_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_alto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/imgFlechita"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/tornar_enrere"
                android:src="@drawable/ic_flechita"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar_objeto"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/so_header"
        app:layout_constraintBottom_toTopOf="@+id/cv_modificarObjeto">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="30dp">

            <ImageView
                android:id="@+id/so_imagen"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/white"
                android:contentDescription="@string/imatge_del_nou_objecte"
                android:src="@drawable/ic_trooka_tittle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_upload_foto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/boto_per_afegir_nou_objecte"
                android:src="@drawable/ic_lapiz"
                app:layout_constraintBottom_toBottomOf="@id/so_imagen"
                app:layout_constraintEnd_toEndOf="@id/so_imagen" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/so_imagen">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_titulo"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@android:color/white"
                        android:hint="@string/titlo_de_l_objecte"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="5"
                        android:minLines="3"
                        android:paddingHorizontal="12dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_titulo">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descripci"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@android:color/white"
                        android:gravity="top"
                        android:hint="@string/afegeix_una_descripci"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
                        android:maxLines="5"
                        android:minLines="3"
                        android:paddingHorizontal="12dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_acanvi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_descripcion">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/que_busques_a_canvi"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_acanvi"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@android:color/white"
                        android:gravity="top"
                        android:hint="@string/descriu_que_busques_a_canvi"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
                        android:maxLines="5"
                        android:minLines="3"
                        android:paddingHorizontal="12dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!--Boton para guardar i subir objeto-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_modificarObjeto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/init_session"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/btn_modificarObjeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/modificar_objecto"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>