<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_fondo"
    tools:context=".MapActivity">

    <Toolbar
        android:id="@+id/cvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/menu_alto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/so_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgFlechita"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/tornar_enrere"
                android:src="@drawable/ic_flechita"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="30dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:hint="@string/cerca_un_punt_de_trobada"
                    android:inputType="text" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </Toolbar>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/mapa"
        android:scaleType="centerCrop"
        android:src="@drawable/map"
        app:layout_constraintBottom_toTopOf="@id/vLinea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvHeader" />

    <ImageView
        android:id="@+id/btn_puntTrobada"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_mapa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/red" />

    <!-- Menu de abajo para todas las activities -->
    <View
        android:id="@+id/vLinea"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/borde"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemActiveIndicatorStyle="@style/Theme.BottomNavigationView.ActiveIndicator"
        app:itemIconGravity="top"
        app:itemIconSize="40dp"
        app:itemIconTint="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>